--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,4 +1,4 @@
-/*@import './header.css';*/
+@import './cases.css';
 
 @font-face {
     font-family: 'roboto';
@@ -30,44 +30,122 @@
 
 * {
     font-family: roboto, sans-serif;
-    font-weight: 400;
     margin: 0;
     padding: 0;
 }
 
 :root {
-  --sidebar-width: 20vw;
   --board-height: 75vh;
   --board-width: 60vw;
-  --card-height: calc((var(--board-height) * 0.8) / 3);
-  --card-width: calc((var(--board-width) * 0.8) / 8);
-  --blue-bg: #065094;
-  --red-bg: #d2202f;
-  --light-blue-bg: skyblue;
-}
-
-.hide {
-  display: none !important;
-}
-
-.two-columns {
-  grid-template-columns: 2fr 3fr !important;
-}
-
-.double-width {
-  width: calc(var(--sidebar-width) * 2) !important;
+  --bottom-height: 80vh;
+  --case-height: calc(var(--case-width) * .85);
+  --case-width: calc(calc(var(--board-width) / 7) - 5px);
+  --cell-height: calc((var(--bottom-height) / 13) - 6px);
+  --center-width: 60vw;
+  --sidebar-width: 20vw;
+  --case-text: calc(var(--case-height) * .6);
+  --top-height: 20vh;
+  --light-gold: #ffed89;
+  --dark-gold: #696236;
+  --muted: rgba(0, 0, 0, 0.7);
 }
 
 /* Main container */
 #container {
-  background-color: var(--light-blue-bg);
+  background-image: url('/background.jpg');
+  background-position: center;
+  background-size: cover;
   display: grid;
-  grid-template-rows: 15vh 85vh;
+  grid-template-rows: var(--top-height) var(--bottom-height);
   height: 100vh;
   width: 100vw;
 }
 
-#game-container {
+#top {
+  background-color: var(--muted);
+  display: flex;
+  justify-content: center;
+}
+
+#top-logo {
+  width: 20vw;
+}
+
+#bottom {
   display: grid;
-  grid-template-columns: 1fr 4fr 1fr;
+  grid-template-columns: var(--sidebar-width) var(--center-width) var(--sidebar-width);
+}
+
+#left,
+#right {
+  width: var(--sidebar-width);
+}
+
+#center {
+  display: grid;
+}
+
+#game,
+#intro-modal {
+  background-color: black;
+  border: 1px solid var(--light-gold);
+  border-radius: 10px;
+  margin: auto;
+  width: var(--board-width);
+}
+
+#game {
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  height: var(--board-height);
+}
+
+#intro-modal {
+  color: var(--dark-gold);
+  height: calc(var(--top-height) - 1rem);
+  left: 50%;
+  position: absolute;
+  top: 0.5rem;
+  transform: translate(-50%, 0);
+}
+
+.modal-content {
+  align-items: center;
+  display: grid;
+  font-size: larger;
+  font-weight: bold;
+  height: 100%;
+  text-align: center;
+  width: 100%;
+}
+
+.hidden {
+  display: none!important;
+}
+
+.prize-cell {
+  background: url('/prize-cell.png');
+  background-color: var(--light-gold);
+  background-position: 50%;
+  background-size: cover;
+  border: 1px solid var(--dark-gold);
+  border-radius: 10px;
+  cursor: pointer;
+  font-weight: bold;
+  height: var(--cell-height);
+  margin: 5px;
+}
+
+.prize-select {
+  align-items: center;
+  border-radius: 9px;
+  display: flex;
+  height: 100%;
+  justify-content: space-between;
+  padding: 0 5px;
+  width: 100%;
+}
+
+.muted {
+  background: var(--muted);
 }
