Ready to calculate offer and move to next round

--- a/src/styles/cases.css
+++ b/src/styles/cases.css
@@ -34,6 +34,10 @@
   opacity: 0.5;
 }
 
+.selected-case:hover {
+  cursor: default;
+}
+
 .case-text {
   font-size: var(--case-text);
   font-weight: 900;
