Working pretty well. Need to end game, reset game

--- a/src/styles/modals.css
+++ b/src/styles/modals.css
@@ -102,6 +102,7 @@
   align-items: center;
   border-radius: 5px;
   color: ivory;
+  cursor: pointer;
   display: flex;
   font-size: x-large;
   font-weight: bolder;
